rust/ittapi-sys/src/linux/jitprofiling_bindings.rs

#[doc = " @brief Description of a dynamic update of the content within JIT-compiled method\n @details The JIT engine may generate the methods that are updated at runtime\n partially by mixed (data + executable code) content. When you use the iJIT_Method_Update\n structure to describe the update of the content within a JIT-compiled method,\n use iJVM_EVENT_TYPE_METHOD_UPDATE_V2 as an event type to report it.\n\n On the first Update event, VTune Profiler copies the original code range reported by\n the iJVM_EVENT_TYPE_METHOD_LOAD event, then modifies it with the supplied bytes and\n adds the modified range to the original method. For next update events, VTune Profiler\n does the same but it uses the latest modified version of a code region for update.\n Eventually, VTune Profiler GUI displays multiple code ranges for the method reported by\n the iJVM_EVENT_TYPE_METHOD_LOAD event.\n Notes:\n - Multiple update events with different types for the same trace are allowed\n   but they must be reported for the same code ranges.\n   Example,\n @code\n                      [-- data---]        Allowed\n          [-- code --]                    Allowed\n        [code]                            Ignored\n                      [-- data---]        Allowed\n          [-- code --]                    Allowed\n      [------------ trace ---------]\n @endcode\n - The types of previously reported events can be changed but they must be reported\n   for the same code ranges.\n   Example,\n @code\n          [-- data---]                    Allowed\n          [-- code --]                    Allowed\n          [-- data---]                    Allowed\n          [-- code --]                    Allowed\n      [------------ trace ---------]\n @endcode"]
pub type piJIT_Method_Update = *mut _iJIT_Method_Update;
#[doc = " @brief Description of a dynamic update of the content within JIT-compiled method\n @details The JIT engine may generate the methods that are updated at runtime\n partially by mixed (data + executable code) content. When you use the iJIT_Method_Update\n structure to describe the update of the content within a JIT-compiled method,\n use iJVM_EVENT_TYPE_METHOD_UPDATE_V2 as an event type to report it.\n\n On the first Update event, VTune Profiler copies the original code range reported by\n the iJVM_EVENT_TYPE_METHOD_LOAD event, then modifies it with the supplied bytes and\n adds the modified range to the original method. For next update events, VTune Profiler\n does the same but it uses the latest modified version of a code region for update.\n Eventually, VTune Profiler GUI displays multiple code ranges for the method reported by\n the iJVM_EVENT_TYPE_METHOD_LOAD event.\n Notes:\n - Multiple update events with different types for the same trace are allowed\n   but they must be reported for the same code ranges.\n   Example,\n @code\n                      [-- data---]        Allowed\n          [-- code --]                    Allowed\n        [code]                            Ignored\n                      [-- data---]        Allowed\n          [-- code --]                    Allowed\n      [------------ trace ---------]\n @endcode\n - The types of previously reported events can be changed but they must be reported\n   for the same code ranges.\n   Example,\n @code\n          [-- data---]                    Allowed\n          [-- code --]                    Allowed\n          [-- data---]                    Allowed\n          [-- code --]                    Allowed\n      [------------ trace ---------]\n @endcode"]
pub type iJIT_Method_Update = _iJIT_Method_Update;
extern "C" {
    #[doc = " @brief Generates a new unique method ID.\n\n You must use this API to obtain unique and valid method IDs for methods or\n traces reported to the agent if you don't have your own mechanism to generate\n unique method IDs.\n\n @return a new unique method ID. When out of unique method IDs, this API\n returns 0, which is not an accepted value."]
    pub fn iJIT_GetNewMethodID() -> ::std::os::raw::c_uint;
}
extern "C" {
    #[doc = " @brief Returns the current mode of the agent.\n\n @return iJIT_SAMPLING_ON, indicating that agent is running, or\n iJIT_NOTHING_RUNNING if no agent is running."]
    pub fn iJIT_IsProfilingActive() -> iJIT_IsProfilingActiveFlags;
}
extern "C" {
    #[doc = " @brief Reports infomation about JIT-compiled code to the agent.\n\n The reported information is used to attribute samples obtained from any\n Intel(R) VTune(TM) Profiler collector. This API needs to be called\n after JIT compilation and before the first entry into the JIT-compiled\n code.\n\n @param[in] event_type - type of the data sent to the agent\n @param[in] EventSpecificData - pointer to event-specific data\n\n @returns 1 on success, otherwise 0."]
    pub fn iJIT_NotifyEvent(
        event_type: iJIT_JVM_EVENT,
        EventSpecificData: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
